@@ -1,5 +1,7 @@
 Revision history for Web::ComposableRequest
 
+          - Toolchain update
+          - Added broken smoker
           - Renames session_expired to expire_session
 
 0.12.1    2016-08-02 21:36:48
